--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -192,13 +192,20 @@
 
         Species demographic rates (seed and germination) for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability. The remaining species were assigned mean demographic rates from these experiments. \\
 
-        We applied the model using R and STAN and ran it with 4 chains and 5000 iterations per chain, discarding the first 1000. Models were checked for convergence and traceplots were visually inspected to verify good chain behaviour and mixing. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our interaction estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network.
+        We applied the model using R and STAN, running 4 chains of 5000 iterations each and discarding the first 1000. Models were checked for convergence and traceplots were visually inspected to verify good chain behaviour and mixing. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our interaction estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network.
 
 
 \section{Results}
 
     \paragraph{}
-    The model framework we present here quantifies pair-wise interaction strengths between species from diverse single-trophic community data. Several aspects of our model and its implementation allow us to better capture complex features of plant communities compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many species. Unlike co-occurrence networks, however, interactions in our model are estimated from species effects on each other's growth rates.  This allows us to capture how interactions may directly affect species abundances, rather than spatial association patterns. Two features make this possible: the response-effect model to estimate unobserved interactions, and a Bayesian implementation to deal with many parameters. 
+    The model framework we present here quantifies pair-wise interaction strengths between species from diverse single-trophic community data. Several aspects of our model and its implementation allow us to better capture complex features of plant communities compared to co-occurrence networks as well as traditional plant population dynamic models. Like co-occurrence networks, our framework is flexible to the inclusion of many species. Unlike co-occurrence networks however, interactions in our model are estimated from species effects on each other's growth rates. This allows us to capture how interactions may directly affect species abundances, rather than spatial association patterns. Two features make this possible: the response-effect model to estimate unobserved interactions, and a Bayesian implementation to deal with many parameters. 
+
+    \begin{figure}[H]
+        \includegraphics[width=\textwidth]{../2.analyses/figures/alpha_est_distr.png}
+        \caption{Distribution of interaction estimates from our case study. Top panel shows the distribution of observed interactions as estimated by the IFM. Second panel shows those same interactions, but estimated with the REM. Bottom panel shows the distribution of unobserved interactions estimated by the REM. Interaction estimates are given as unscaled \(\alpha\)'s.}
+        \label{fig:adist}
+    \end{figure}
+
 
     \paragraph{}
     The response-effect model allows us to deal with a small number of unobserved interactions by relaxing assumptions for those cases and estimating more general 'effect' and 'response' parameters from the pair-wise interactions that are observed. Because they are estimated from observed interactions previously quantified by the IFM, the response and effect parameters are constrained such that their product follows a similar distribution to that of the observed interactions (Figure \ref{fig:adist}). In our case study, 15\% of interactions between focal species were estimated using the REM (out of 484), 40\% when taking all neighbouring species into account (out of 1144). 
@@ -209,17 +216,13 @@
 
 
     \paragraph{}
-    The resulting networks are non-symmetrical and can include both positive and negative interactions (panel A in Figure \ref{fig:netwks}), features which makes them qualitatively different to association networks as well as different to traditional plant population ecology approaches. By allowing for non-symmetry, the effect of species 1 on species 2 does not need to match the effect of species 2 on species 1. In our case study, 40\% of interactions between a pair of species were asymmetrical in type, that is of opposing signs (panel B, Figure \ref{fig:netwks}) and many more differed in strength. 
-    
-    Our method also breaks from traditional plant population dynamic models by allowing for facilitation, whereas interactions are typically forced to be competitive. Facilitation is well-known to be important to community dynamics but is not explicitly measured or recognised by these approaches, despite rising evidence that it is a common feature of plant-plant communities \citep{Brooker2008a}. In our case study, 35\% of all focal x neighbour interactions were facilitative, and 26 \% of all focal x focal interactions (panels C and D, Figure \ref{fig:netwks}).
+    The resulting networks are qualitatively different to association networks (Figure \ref{fig:netwks}.A-B, E). Interactions estimated on growth rates are directed, which means they have an associated direction such as going from species $i$ to species $j$ ($\alpha_{ij}$), or alternatively from $j$ to $i$ ($\alpha_{ji}$). This interaction pair does not need to be of the same sign or strength, which makes the resulting interaction networks non-symmetrical. Interaction pairs of opposing signs were common in our case study (Figure \ref{fig:netwks}.D), making up 40\% of all pairs and many more differed in strength. 
+
+    \paragraph{}
+    In addition to explicitely allowing for many species interactions, including both competitive (Figure \ref{fig:netwks}.A) and facilitative (Figure \ref{fig:netwks}.B) interactions is another feature which distinguishes this framework from traditional approaches to plant community ecology. Plant population dynamic models typically force interactions to be competitive, despite rising evidence that facilitation is common and an important driver of plant community dynamics \citep{Brooker2008a}. In our case study, 35\% of all focal x neighbour interactions were facilitative, as were 26 \% of all focal x focal interactions.
 
 
 
-        \begin{figure}[H]
-        \includegraphics[width=\textwidth]{../2.analyses/figures/alpha_est_distr.png}
-        \caption{Distribution of interaction estimates from our case study. Top panel shows the distribution of observed interactions as estimated by the IFM. Second panel shows those same interactions, but estimated with the REM. Bottom panel shows the distribution of unobserved interactions estimated by the REM. Interaction estimates are given as unscaled \(\alpha\)'s.}
-        \label{fig:adist}
-    \end{figure}
 
 
     \begin{figure}[H]
@@ -230,7 +233,7 @@
     \end{figure}    
 
     \paragraph{} 
-    Interaction networks can be used to identify species of particular importance to the healthy functioning of the community. Keystone species for example typically have low abundance but disproportionately strong effects on the rest of the community \citep{Power1996}. Foundation species on the other hand are locally abundant and have important, sometimes facilitative effects on other species population dynamics \citep{Ellison2019}. Figure \ref{fig:species}.A. identifies several contenders for keystone (orange diamonds) or foundation (blue diamonds) species status based on their community abundance and net interaction effects across all neighbours. Likewise, the integration of exotic species into native communities can also be evaluated using interaction networks. In our case study, two out of three exotic species (red diamonds in Fig. \ref{fig:species}) were extremely abundant but had substantially different effects on neighbours, with the grass \textit{Pentameris airoides} facilitating some neighbours, whereas \textit{Arctotheca calendula} had almost exclusively competitive effects on other species (Fig. \ref{fig:species}.B.). These examples are not exhaustive, but serve to illustrate how interaction networks can help us understand what roles specific species play within a community.
+    The resulting interaction networks can be used to identify species of particular importance to the healthy functioning of the community. Keystone species for example typically have low abundance but disproportionately strong effects on the rest of the community \citep{Power1996}. Foundation species on the other hand are locally abundant and have important, sometimes facilitative effects on other species population dynamics \citep{Ellison2019}. Figure \ref{fig:species}.A. identifies several contenders for keystone (orange diamonds) or foundation (blue diamonds) species status based on their community abundance and net interaction effects across all neighbours. Likewise, the integration of exotic species into native communities can also be evaluated using interaction networks. In our case study, two out of three exotic species (red diamonds in Fig. \ref{fig:species}) were extremely abundant but had substantially different effects on neighbours, with the grass \textit{Pentameris airoides} facilitating some species, whereas \textit{Arctotheca calendula} had almost exclusively competitive effects on all other neighbours (Fig. \ref{fig:species}.B.). These examples are not exhaustive, but serve to illustrate how interaction networks can help us understand what roles specific species play within a community.  [This last sentence might be better in the discussion]
 
 
  %    Identifying keystone species. .. GITE and HAOD rel. abund < 0.01, two highest sumaji. Maybe GOBE  too? 
@@ -279,7 +282,7 @@
 
     The interaction matrices this model estimates are fundamentally different to association networks, which are a common alternative to estimating interactions in species-rich communities. Our estimates are direct per-capita effects of one species on another so have direct consequences on population abundances. Our model and it's implementation can estimate these interactions for many species, as well as include intraspecific interactions and facilitation. Our framework thus produces a better representation of the complexity of real plant communities and their interactions. This then allows us to do a bunch of cool stuff to a) better understand plant communities in general and b) better understand a specific plant system.  
 
-    % Make it easier for empiricists to characterise species interactions in their system. Typically experimenters who want to build measure these things need to come up with complex models to resolve all interactions. If your data is plant annuals you can just plug your data right in. If it's a different type of species, you just need to adapt the population model and scaling of the interactions to work with your particular system. 
+    Make it easier for empiricists to characterise species interactions in their system. Typically experimenters who want to build measure these things need to come up with complex models to resolve all interactions. If your data is plant annuals you can just plug your data right in. If it's a different type of species, you just need to adapt the population model and scaling of the interactions to work with your particular system. 
 
     % - deals with many species + measure of uncertainty
     % - deals with some unobserved interactions
@@ -291,7 +294,10 @@
 
     \subsection{Limitations}
         
-        Though our framework does provide a way of estimating interactions between species which are not observed to cooccur, care should be taken that these unobserved interactions do not dominate a resulting network. The method we propose uses observed interactions to estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones. This method is not appropriate for datasets dominated by missing data on interactions (e.g. over 50\% 'unobserved' interactions).  It is also important to consider the likely reasons for missing interactions.  For instance, species pairs known to lack overlapping environmental requirements likely do not occur together due to environmental filtering that precedes interaction between individuals of the species.  It would not be appropriate to include such pairs in our framework. These interactions can be replaced with a 0... briefly bring up forbidden interactions, and how that framework (get a ref) could be helpful to people who have a lot of missing observations, or where there’s likely to be strong niche differences between species leading to no interactions. \\
+        \paragraph{}
+        Though our framework does provide a way of estimating interactions between species which are not observed to cooccur, care should be taken that these unobserved interactions do not dominate a resulting network. The method we propose uses observed interactions to estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones. This method is not appropriate for datasets dominated by missing data on interactions (e.g. over 50\% 'unobserved' interactions). It is also important to consider the likely reasons for missing interactions.  For instance, species pairs known to lack overlapping environmental requirements likely do not occur together due to environmental filtering that precedes interaction between individuals of the species. It would not be appropriate to include such pairs in our framework. 
+
+        These interactions can be replaced with a 0... briefly bring up forbidden interactions, and how that framework (get a ref) could be helpful to people who have a lot of missing observations, or where there’s likely to be strong niche differences between species leading to no interactions. 
 
         Our model framework is aimed to helping empiricists who want to estimate interactions for non-trophic horizontal communities - but these empiricists will still require large amounts of data. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify that the full parameter space is sampled. We wouldn't recommend fewer than 20 observations per focal species, and we do recommend grouping species which appear very very rarely (Give details, what criteria did I use? Can also say you can change that, especially if you know the system well...). More data will also give more precise estimates of interaction strengths.   
 
@@ -316,7 +322,7 @@
 
         Quantifying the interaction networks of plant communities allows us to explore how the mechanisms maintaining diversity and stability operate across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability (Barabas 2017 NEE) and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species: weak interactions between species indicate they are not sharing or competing for many resources, and occupy different niche spaces in the community (ref??). Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to continued coexistence in plant communities.\\
 
-        A key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised (Bruno Callaway 2003) but there is still little consensus on how they may affect coexistence between species. % MMM comment on ‘coexistence’: Needs to be clear if you have a good way to make this link or not – Maybe use ‘biodiversity’ or synonym, not coex? 
+        A key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised (Bruno Callaway 2003) but there is still little consensus on how they may affect biodiversity. % MMM comment on ‘coexistence’: Needs to be clear if you have a good way to make this link or not – Maybe use ‘biodiversity’ or synonym, not coex? 
         Recent work suggests facilitation may be common (ref) and may harm or benefit species diversity and stability depending on the circumstances (ref). Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  \\
      
         Ultimately, quantifying plant interaction networks allows us to apply tools from network theory which will help us understand not only how plants interact, but also how these interactions drive community-level patterns of abundance and diversity. Several metrics already exist for describing network structure such as weighted connectance or relative intransitivity, though these are fewer than for trophic or bipartite networks. Adapting measures of nestedness or modularity for example to non-sparse networks (as plant communities typically are) would allow us to further characterise how interactions and species are organised. These metrics all relate to different aspects of stability and could greatly inform us on how diversity is maintained between plants.  
